[2018-0103]말줄임 추가

--- a/root/guide/guide_ui.html
+++ b/root/guide/guide_ui.html
@@ -23,7 +23,7 @@
     </style>
     <script>
         $(document).ready(function(){
-            $("h2").on("click", function(e){ console.log("gogogo")
+            $("h2").on("click", function(e){ 
                $('body,html').animate({ scrollTop: 0}, 100);
                 return false;
             })
